[package]
name = "rust-w6d"
version = "0.1.0"
authors = ["Py4mac <boisbu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
config = "0.10.1"
tokio-pg-mapper="0.1.4"
tokio-pg-mapper-derive="0.1.4"
deadpool-postgres="0.5.0"
tokio-postgres="0.5.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
log = "0.4.0"
env_logger = "0.8.3"